--- a/Project_1_RBM_and_Tomography/Task1.ipynb
+++ b/Project_1_RBM_and_Tomography/Task1.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "# # training_data = torch.from_numpy(np.loadtxt(\"H2_data/R_1.2_samples.txt\"))\n",
     "# training_data = torch.from_numpy(np.loadtxt(\"H2_data/R_1.2_samples.txt\"))\n",
-    "# coeff = np.loadtxt(\"H2_data/H2_coefficients.txt\")[20,:]\n",
+    "coeff = np.loadtxt(\"H2_data/H2_coefficients.txt\")[20,:]\n",
     "\n",
     "# true_energy = H2_energy_calculator.energy_from_freq(training_data, coeff)\n",
     "# print(\"H2 energy for r = 1.2: \",true_energy)\n",
