added the google colab badge to the notebook

--- a/Project_1_RBM_and_Tomography/Task1_Oscar_JH.ipynb
+++ b/Project_1_RBM_and_Tomography/Task1_Oscar_JH.ipynb
@@ -8,7 +8,13 @@
     "\n",
     "A template code for training an RBM on H$_2$ data for $r = 1.2$ is shown here. Modify this!\n",
     "\n",
-    "Imports and loading in data:"
+    "Imports and loading in data:\n",
+    "\n",
+    "\n",
+    "## Run the notebook on google colab\n",
+    "To run the notebook on google colab press the badge below \n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/olgOk/CohortProject_2020/blob/master/Project_1_RBM_and_Tomography/Task1_Oscar_JH.ipynb)"
    ]
   },
   {
