fixed the path for running the code on google colab

--- a/Project_1_RBM_and_Tomography/Task1_Oscar_JH.ipynb
+++ b/Project_1_RBM_and_Tomography/Task1_Oscar_JH.ipynb
@@ -33,7 +33,8 @@
     "if IN_COLAB:\n",
     "  ! git clone https://github.com/olgOk/CohortProject_2020.git\n",
     "  from google.colab import drive\n",
-    "  drive.mount('/content/gdrive') \n",
+    "  drive.mount('/content/gdrive')\n",
+    "  %cd CohortProject_2020/\n",
     "  %cd Project_1_RBM_and_Tomography/\n",
     "  ! git pull\n",
     "\n",
