added comments for task2

--- a/Project_1_RBM_and_Tomography/Task2.ipynb
+++ b/Project_1_RBM_and_Tomography/Task2.ipynb
@@ -79,27 +79,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Energy from RBM samples:  -4.120228182937637\n",
+      "Energy from RBM samples:  -4.120142919012315\n",
       "\n",
       "Epoch:  200\n",
       "Sampling...\n",
       "Done sampling. Calculating energy...\n",
-      "Energy from RBM samples:  -4.12029220876827\n",
+      "Energy from RBM samples:  -4.120207028500263\n",
       "\n",
       "Epoch:  300\n",
       "Sampling...\n",
       "Done sampling. Calculating energy...\n",
-      "Energy from RBM samples:  -4.120005919049727\n",
+      "Energy from RBM samples:  -4.119560076406688\n",
       "\n",
       "Epoch:  400\n",
       "Sampling...\n",
       "Done sampling. Calculating energy...\n",
-      "Energy from RBM samples:  -4.120088937582905\n",
+      "Energy from RBM samples:  -4.12024532814234\n",
       "\n",
       "Epoch:  500\n",
       "Sampling...\n",
       "Done sampling. Calculating energy...\n",
-      "Energy from RBM samples:  -4.120065921116737\n"
+      "Energy from RBM samples:  -4.119890676021925\n"
      ]
     }
    ],
@@ -187,6 +187,13 @@
     "    \n",
     "\n",
     "print(\"Minimum number of Hidden Units required to get error < 0.0001 = \", n_hin)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interesting....... only 1 hidden unit is required, this might due to fact that the process is GPU accelerated."
    ]
   },
   {
@@ -915,6 +922,13 @@
     "    \n",
     "\n",
     "print(\"Minimum number of Data required to get error < 0.0001 = \", n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The issue here is that due to a low sample size and with a low number of hidden layer n_hid = 2 and a sample count of 2000, thus the number of sample data required for the RBM to learn the pattern is going to be high for it to truly learn the distribution of the $H_2$ data,, by increasing the number of *num_samples* would reduce the number of Data points required. "
    ]
   }
  ],
