added further questions is Task2 notebook

--- a/Project_1_RBM_and_Tomography/Task2.ipynb
+++ b/Project_1_RBM_and_Tomography/Task2.ipynb
@@ -930,6 +930,26 @@
    "source": [
     "The issue here is that due to a low sample size and with a low number of hidden layer n_hid = 2 and a sample count of 2000, thus the number of sample data required for the RBM to learn the pattern is going to be high for it to truly learn the distribution of the $H_2$ data,, by increasing the number of *num_samples* would reduce the number of Data points required. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Further Questions\n",
+    "****\n",
+    "#### Question 1:\n",
+    "Regarding the LiH BeH2 issue, check out the documentation of the function Qsr from NetKet (https://www.netket.org/tutorials/qst.html?highlight=qsr). From it, we believe the main difference is that the RBM learns from measurements not only on the Z basis (computational basis) but also on the X and Y bases, hence the rotation X and Y. These measurements are really projections of the full wave functions onto different bases (axes) so with a more complicated molecule (with more complicated shape in a sense), more projections from different perspective allow a better description of the full wave function. The cartoon is to illustrate the idea haha. (edited) \n",
+    "![alt text](image.png \"Title\")\n",
+    "Another technical detail difference I noticed is that in addition to the energy, they use the fidelity, which quantifies how much 2 wavefunctions overlap (kinda like a dot product), to see how well the RBM is doing(psi files)\n",
+    "\n",
+    "#### Question 2:\n",
+    "RNN has been used to for such processes as shown in : \n",
+    "https://www.researchgate.net/publication/338496561_Using_a_Recurrent_Neural_Network_to_Reconstruct_Quantum_Dynamics_of_a_Superconducting_Qubit_from_Physical_Observations\n",
+    "of which LSTM a extension of RNN might also be useful for such cases.\n",
+    "\n",
+    "Also there is another reaserch with uses Deep Neural Networks(DNN) to reconstruct quantum states:\n",
+    "https://arxiv.org/pdf/1904.05902.pdf"
+   ]
   }
  ],
  "metadata": {
