Starting to play with the first notebook

--- a/Project_2_VQE_Molecules/S1_Classical_Methods_hermanni.ipynb
+++ b/Project_2_VQE_Molecules/S1_Classical_Methods_hermanni.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,17 +374,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bond_lengths = np.linspace(0.1,1.0,15)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E = 2.7629075297859043 Eh\n",
+      "E = -2.6842987480817744 Eh\n",
+      "E = -4.772784073847836 Eh\n",
+      "E = -5.801181271272524 Eh\n",
+      "E = -6.3813608212088 Eh\n",
+      "E = -6.746095660520908 Eh\n",
+      "E = -7.002481348119937 Eh\n",
+      "E = -7.197534488463854 Eh\n",
+      "E = -7.350168972226934 Eh\n",
+      "E = -7.4707244942140285 Eh\n",
+      "E = -7.566192087531446 Eh\n",
+      "E = -7.641703520613835 Eh\n",
+      "E = -7.701237719016587 Eh\n",
+      "E = -7.747971396411857 Eh\n",
+      "E = -7.784460280267046 Eh\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Run FCI\n",
+    "FCI_PES = obtain_PES('lih', bond_lengths, basis, method='fci')"
+   ]
   },
   {
    "cell_type": "code",
