--- a/Project_2_VQE_Molecules/S5_Circuits.ipynb
+++ b/Project_2_VQE_Molecules/S5_Circuits.ipynb
@@ -33,9 +33,21 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "circuit: \nRx(target=(0,), parameter=beta_0)\nRz(target=(0,), parameter=gamma_0)\nRx(target=(1,), parameter=beta_1)\nRz(target=(1,), parameter=gamma_1)\nRx(target=(2,), parameter=beta_2)\nRz(target=(2,), parameter=gamma_2)\nRx(target=(3,), parameter=beta_3)\nRz(target=(3,), parameter=gamma_3)\nExp-Pauli(target=(0, 1, 2, 3), control=(), parameter=tau_0, paulistring=X(0)Y(1)X(2)X(3))\n\n"
+     "output_type": "stream",
+     "text": [
+      "circuit: \n",
+      "Rx(target=(0,), parameter=beta_0)\n",
+      "Rz(target=(0,), parameter=gamma_0)\n",
+      "Rx(target=(1,), parameter=beta_1)\n",
+      "Rz(target=(1,), parameter=gamma_1)\n",
+      "Rx(target=(2,), parameter=beta_2)\n",
+      "Rz(target=(2,), parameter=gamma_2)\n",
+      "Rx(target=(3,), parameter=beta_3)\n",
+      "Rz(target=(3,), parameter=gamma_3)\n",
+      "Exp-Pauli(target=(0, 1, 2, 3), control=(), parameter=tau_0, paulistring=X(0)Y(1)X(2)X(3))\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -62,9 +74,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "-0.9486411121761621\n"
+     "output_type": "stream",
+     "text": [
+      "-0.9486411121761621\n"
+     ]
     }
    ],
    "source": [
@@ -84,10 +98,22 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<AccountProvider for IBMQ(hub='ibm-q', group='open', project='main')>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# from qiskit import IBMQ\n",
-    "# IBMQ.save_account('MY_API_TOKEN')"
+    "from qiskit import IBMQ\n",
+    "# IBMQ.save_account('MY_API_TOKEN')\n",
+    "IBMQ.enable_account('1bec9792c8d6a2b7d58904c1de13aca36b17ec35ad8551a6978e2d07fe73f9de55a0b1ade318ada0898908ccd0b830102276e58ab2c2b89b45501b6d10fb092f')"
    ]
   },
   {
@@ -98,17 +124,27 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: could not get the desired backend ibmq_essex from any IBMQ account. Attempting to retrieve a fake.\n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": "-0.7276849297174877"
+      "text/plain": [
+       "-0.9443634584223759"
+      ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# list of devices available can be found in ibmq account page\n",
-    "tq.simulate(E, variables=vars, samples=100, backend=\"qiskit\", device='ibmq_ourense')"
+    "#provider = IBMQ.get_provider(hub='ibm-q-nus', group='default', project='default') \n",
+    "tq.simulate(E, variables=vars, samples=100, backend=\"qiskit\", device='ibmq_essex')#,qiskit_provider = provider) "
    ]
   },
   {
@@ -126,18 +162,65 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "┌────────────────────┐┌─────────────────────┐   ┌───┐                   »\nq_0: ┤ RX(f((beta_0,))_0) ├┤ RZ(f((gamma_0,))_1) ├───┤ H ├──────■────────────»\n     ├────────────────────┤├─────────────────────┤┌──┴───┴───┐┌─┴─┐          »\nq_1: ┤ RX(f((beta_1,))_2) ├┤ RZ(f((gamma_1,))_3) ├┤ RX(pi/2) ├┤ X ├──■───────»\n     ├────────────────────┤├─────────────────────┤└──┬───┬───┘└───┘┌─┴─┐     »\nq_2: ┤ RX(f((beta_2,))_4) ├┤ RZ(f((gamma_2,))_5) ├───┤ H ├─────────┤ X ├──■──»\n     ├────────────────────┤├─────────────────────┤   ├───┤         └───┘┌─┴─┐»\nq_3: ┤ RX(f((beta_3,))_6) ├┤ RZ(f((gamma_3,))_7) ├───┤ H ├──────────────┤ X ├»\n     └────────────────────┘└─────────────────────┘   └───┘              └───┘»\nc_0: ════════════════════════════════════════════════════════════════════════»\n                                                                             »\nc_1: ════════════════════════════════════════════════════════════════════════»\n                                                                             »\nc_2: ════════════════════════════════════════════════════════════════════════»\n                                                                             »\nc_3: ════════════════════════════════════════════════════════════════════════»\n                                                                             »\n«                                             ┌───┐    \n«q_0: ─────────────────────────────────■──────┤ H ├────\n«                                    ┌─┴─┐┌───┴───┴───┐\n«q_1: ────────────────────────────■──┤ X ├┤ RX(-pi/2) ├\n«                               ┌─┴─┐├───┤└───────────┘\n«q_2: ───────────────────────■──┤ X ├┤ H ├─────────────\n«     ┌───────────────────┐┌─┴─┐├───┤└───┘             \n«q_3: ┤ RZ(f((tau_0,))_8) ├┤ X ├┤ H ├──────────────────\n«     └───────────────────┘└───┘└───┘                  \n«c_0: ═════════════════════════════════════════════════\n«                                                      \n«c_1: ═════════════════════════════════════════════════\n«                                                      \n«c_2: ═════════════════════════════════════════════════\n«                                                      \n«c_3: ═════════════════════════════════════════════════\n«                                                      \n"
+     "output_type": "stream",
+     "text": [
+      "     ┌────────────────────┐┌─────────────────────┐   ┌───┐                   »\n",
+      "q_0: ┤ RX(f((beta_0,))_0) ├┤ RZ(f((gamma_0,))_1) ├───┤ H ├──────■────────────»\n",
+      "     ├────────────────────┤├─────────────────────┤┌──┴───┴───┐┌─┴─┐          »\n",
+      "q_1: ┤ RX(f((beta_1,))_2) ├┤ RZ(f((gamma_1,))_3) ├┤ RX(pi/2) ├┤ X ├──■───────»\n",
+      "     ├────────────────────┤├─────────────────────┤└──┬───┬───┘└───┘┌─┴─┐     »\n",
+      "q_2: ┤ RX(f((beta_2,))_4) ├┤ RZ(f((gamma_2,))_5) ├───┤ H ├─────────┤ X ├──■──»\n",
+      "     ├────────────────────┤├─────────────────────┤   ├───┤         └───┘┌─┴─┐»\n",
+      "q_3: ┤ RX(f((beta_3,))_6) ├┤ RZ(f((gamma_3,))_7) ├───┤ H ├──────────────┤ X ├»\n",
+      "     └────────────────────┘└─────────────────────┘   └───┘              └───┘»\n",
+      "c_0: ════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                             »\n",
+      "c_1: ════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                             »\n",
+      "c_2: ════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                             »\n",
+      "c_3: ════════════════════════════════════════════════════════════════════════»\n",
+      "                                                                             »\n",
+      "«                                             ┌───┐    \n",
+      "«q_0: ─────────────────────────────────■──────┤ H ├────\n",
+      "«                                    ┌─┴─┐┌───┴───┴───┐\n",
+      "«q_1: ────────────────────────────■──┤ X ├┤ RX(-pi/2) ├\n",
+      "«                               ┌─┴─┐├───┤└───────────┘\n",
+      "«q_2: ───────────────────────■──┤ X ├┤ H ├─────────────\n",
+      "«     ┌───────────────────┐┌─┴─┐├───┤└───┘             \n",
+      "«q_3: ┤ RZ(f((tau_0,))_8) ├┤ X ├┤ H ├──────────────────\n",
+      "«     └───────────────────┘└───┘└───┘                  \n",
+      "«c_0: ═════════════════════════════════════════════════\n",
+      "«                                                      \n",
+      "«c_1: ═════════════════════════════════════════════════\n",
+      "«                                                      \n",
+      "«c_2: ═════════════════════════════════════════════════\n",
+      "«                                                      \n",
+      "«c_3: ═════════════════════════════════════════════════\n",
+      "«                                                      \n"
+     ]
     }
    ],
    "source": [
     "circ = tq.circuit.compiler.compile_exponential_pauli_gate(U)\n",
     "tq.draw(circ, backend=\"qiskit\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -148,12 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "qchem",
-   "display_name": "qchem"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
