Completed H4 and LiH simulated calculation

--- a/Project_2_VQE_Molecules/H4_complete.ipynb
+++ b/Project_2_VQE_Molecules/H4_complete.ipynb
@@ -26,69 +26,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E = -7.6341673297283865 Eh\n",
-      "E = -7.747971396411857 Eh\n",
-      "E = -7.815461693262618 Eh\n",
-      "E = -7.853923340910018 Eh\n",
-      "E = -7.873906314975347 Eh\n",
-      "E = -7.881900216992755 Eh\n",
-      "E = -7.882064186803904 Eh\n",
-      "E = -7.877187002263677 Eh\n",
-      "E = -7.869202118324594 Eh\n",
-      "E = -7.859481696259449 Eh\n",
-      "E = -7.849018888056797 Eh\n",
-      "E = -7.838545514268586 Eh\n",
-      "E = -7.828604512640146 Eh\n",
-      "E = -7.81958580122672 Eh\n",
-      "E = -7.811735339056936 Eh\n",
-      "E = -7.615847732045339 Eh\n",
-      "E = -7.730607039817713 Eh\n",
-      "E = -7.798689186549769 Eh\n",
-      "E = -7.8371725396373515 Eh\n",
-      "E = -7.856533462400318 Eh\n",
-      "E = -7.863243521973542 Eh\n",
-      "E = -7.86145228609765 Eh\n",
-      "E = -7.853927324256968 Eh\n",
-      "E = -7.8425641686875025 Eh\n",
-      "E = -7.828680558353572 Eh\n",
-      "E = -7.813202113338108 Eh\n",
-      "E = -7.796787987663015 Eh\n",
-      "E = -7.779919081959568 Eh\n",
-      "E = -7.762959708023006 Eh\n",
-      "E = -7.74619817582372 Eh\n",
-      "E = -7.634160527656576 Eh\n",
-      "E = -7.747965054777978 Eh\n",
-      "E = -7.81545496550826 Eh\n",
-      "E = -7.8539158831331095 Eh\n",
-      "E = -7.8738975539577405 Eh\n",
-      "E = -7.881889684738874 Eh\n",
-      "E = -7.882051700398198 Eh\n",
-      "E = -7.877172595062058 Eh\n",
-      "E = -7.869185663291106 Eh\n",
-      "E = -7.859462699375522 Eh\n",
-      "E = -7.848996445614997 Eh\n",
-      "E = -7.838518281461029 Eh\n",
-      "E = -7.828570729160713 Eh\n",
-      "E = -7.819543465414723 Eh\n",
-      "E = -7.811682577240456 Eh\n"
+      "E = -1.728280864746984 Eh\n",
+      "E = -1.8757673115297737 Eh\n",
+      "E = -1.9436685341419784 Eh\n",
+      "E = -1.968116870153743 Eh\n",
+      "E = -1.968871750533924 Eh\n",
+      "E = -1.9575160224134402 Eh\n",
+      "E = -1.941121962708516 Eh\n",
+      "E = -1.924006921870783 Eh\n",
+      "E = -1.908620786307281 Eh\n",
+      "E = -1.8960726556134475 Eh\n",
+      "E = -1.8865510355260706 Eh\n",
+      "E = -1.8797113367238416 Eh\n",
+      "E = -1.8749960099801717 Eh\n",
+      "E = -1.8718427824231205 Eh\n",
+      "E = -1.8697821728146733 Eh\n",
+      "E = -1.6019400748316626 Eh\n",
+      "E = -1.7310111342441017 Eh\n",
+      "E = -1.7791045408792772 Eh\n",
+      "E = -1.7818090946446667 Eh\n",
+      "E = -1.7585910209903717 Eh\n",
+      "E = -1.7209124635779496 Eh\n",
+      "E = -1.67587034187085 Eh\n",
+      "E = -1.6279977412549202 Eh\n",
+      "E = -1.5802294832603305 Eh\n",
+      "E = -1.5344454873708084 Eh\n",
+      "E = -1.4917887476436849 Eh\n",
+      "E = -1.4528712693195471 Eh\n",
+      "E = -1.4179286302686067 Eh\n",
+      "E = -1.386943949202337 Eh\n",
+      "E = -1.359742571061905 Eh\n",
+      "E = -1.730297072383217 Eh\n",
+      "E = -1.8787802508847276 Eh\n",
+      "E = -1.9481335329118372 Eh\n",
+      "E = -1.9745957353524095 Eh\n",
+      "E = -1.9780170268528496 Eh\n",
+      "E = -1.9698470785114286 Eh\n",
+      "E = -1.9566753319492185 Eh\n",
+      "E = -1.9421459032861044 Eh\n",
+      "E = -1.9281572807814633 Eh\n",
+      "E = -1.915615860093793 Eh\n",
+      "E = -1.9048746816066915 Eh\n",
+      "E = -1.8959755978334116 Eh\n",
+      "E = -1.8887901915338985 Eh\n",
+      "E = -1.8831090082577022 Eh\n",
+      "E = -1.878697664885484 Eh\n"
      ]
     }
    ],
    "source": [
     "bond_lengths = np.linspace(0.8,2.7,15)\n",
     "#Run FCI\n",
-    "FCI_PES = obtain_PES('lih', bond_lengths, basis, method='fci')\n",
+    "FCI_PES = obtain_PES('h4', bond_lengths, basis, method='fci')\n",
     "#Run HF\n",
-    "HF_PES = obtain_PES('lih', bond_lengths, basis,  method='hf')\n",
+    "HF_PES = obtain_PES('h4', bond_lengths, basis,  method='hf')\n",
     "#Run CCSD\n",
-    "CCSD_PES = obtain_PES('lih', bond_lengths, basis,  method='ccsd')"
+    "CCSD_PES = obtain_PES('h4', bond_lengths, basis,  method='ccsd')"
    ]
   },
   {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,34 @@
       "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044242205065626, (3, 0, 3, 0): -0.1272361099986105, (2, 0, 3, 1): 0.3144666528615632, (2, 1, 2, 1): -0.6718294596277832, (3, 1, 3, 1): -0.04680269890699747, (3, 0, 2, 1): 0.0018891841755230923, (2, 0, 2, 0): -0.046197653332384785, (2, 1, 3, 0): -0.3376982003293647}  samples= None\n",
       "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044242205065817, (3, 0, 3, 0): -0.12723610999861032, (2, 0, 3, 1): 0.3144666528615828, (2, 1, 2, 1): -0.6718294596277833, (3, 1, 3, 1): -0.0468026989069975, (3, 0, 2, 1): 0.0018891841755265262, (2, 0, 2, 0): -0.046197653332384965, (2, 1, 3, 0): -0.33769820032936976}  samples= None\n",
       "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044242205065626, (3, 0, 3, 0): -0.1272361099986105, (2, 0, 3, 1): 0.3144666528615632, (2, 1, 2, 1): -0.6718294596277832, (3, 1, 3, 1): -0.04680269890699747, (3, 0, 2, 1): 0.0018891841755230923, (2, 0, 2, 0): -0.046197653332384785, (2, 1, 3, 0): -0.3376982003293647}  samples= None\n",
-      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044242205065721, (3, 0, 3, 0): -0.12723610999861043, (2, 0, 3, 1): 0.31446665286157305, (2, 1, 2, 1): -0.6718294596277833, (3, 1, 3, 1): -0.04680269890699748, (3, 0, 2, 1): 0.0018891841755248092, (2, 0, 2, 0): -0.046197653332384875, (2, 1, 3, 0): -0.3376982003293672}  samples= None\n"
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044242205065721, (3, 0, 3, 0): -0.12723610999861043, (2, 0, 3, 1): 0.31446665286157305, (2, 1, 2, 1): -0.6718294596277833, (3, 1, 3, 1): -0.04680269890699748, (3, 0, 2, 1): 0.0018891841755248092, (2, 0, 2, 0): -0.046197653332384875, (2, 1, 3, 0): -0.3376982003293672}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044242205065769, (3, 0, 3, 0): -0.12723610999861037, (2, 0, 3, 1): 0.31446665286157793, (2, 1, 2, 1): -0.6718294596277833, (3, 1, 3, 1): -0.04680269890699749, (3, 0, 2, 1): 0.0018891841755256677, (2, 0, 2, 0): -0.046197653332384916, (2, 1, 3, 0): -0.3376982003293685}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044242205065721, (3, 0, 3, 0): -0.12723610999861043, (2, 0, 3, 1): 0.31446665286157305, (2, 1, 2, 1): -0.6718294596277833, (3, 1, 3, 1): -0.04680269890699748, (3, 0, 2, 1): 0.0018891841755248092, (2, 0, 2, 0): -0.046197653332384875, (2, 1, 3, 0): -0.3376982003293672}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044464981191111, (3, 0, 3, 0): -0.1272358859712245, (2, 0, 3, 1): 0.3144894885972649, (2, 1, 2, 1): -0.6718295898222871, (3, 1, 3, 1): -0.04680273223398191, (3, 0, 2, 1): 0.001893187521194566, (2, 0, 2, 0): -0.046197862437262635, (2, 1, 3, 0): -0.3377041126237306}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044353591964785, (3, 0, 3, 0): -0.12723599798608765, (2, 0, 3, 1): 0.3144780706101405, (2, 1, 2, 1): -0.6718295247243552, (3, 1, 3, 1): -0.04680271557031562, (3, 0, 2, 1): 0.0018911858274489133, (2, 0, 2, 0): -0.04619775788373153, (2, 1, 3, 0): -0.3377011564456671}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044297897351621, (3, 0, 3, 0): -0.1272360539935192, (2, 0, 3, 1): 0.31447236161657827, (2, 1, 2, 1): -0.6718294921753891, (3, 1, 3, 1): -0.046802707238482476, (3, 0, 2, 1): 0.001890184980576087, (2, 0, 2, 0): -0.04619770560696598, (2, 1, 3, 0): -0.33769967835663534}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044270050045039, (3, 0, 3, 0): -0.12723608199723496, (2, 0, 3, 1): 0.3144695071197972, (2, 1, 2, 1): -0.6718294759009061, (3, 1, 3, 1): -0.0468027030725659, (3, 0, 2, 1): 0.0018896845571396738, (2, 0, 2, 0): -0.046197679468583205, (2, 1, 3, 0): -0.3376989393121194}  samples= None\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044256126391748, (3, 0, 3, 0): -0.12723609599909286, (2, 0, 3, 1): 0.3144680798714066, (2, 1, 2, 1): -0.6718294677636647, (3, 1, 3, 1): -0.046802700989607614, (3, 0, 2, 1): 0.0018894343454214672, (2, 0, 2, 0): -0.04619766639939182, (2, 1, 3, 0): -0.3376985697898615}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044249164565103, (3, 0, 3, 0): -0.1272361030000218, (2, 0, 3, 1): 0.3144673662472114, (2, 1, 2, 1): -0.6718294636950439, (3, 1, 3, 1): -0.046802699948128475, (3, 0, 2, 1): 0.001889309239562364, (2, 0, 2, 0): -0.04619765986479612, (2, 1, 3, 0): -0.3376983850287325}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044245683651781, (3, 0, 3, 0): -0.12723610650048628, (2, 0, 3, 1): 0.31446700943511374, (2, 1, 2, 1): -0.6718294616607335, (3, 1, 3, 1): -0.0468026994273889, (3, 0, 2, 1): 0.0018892466866328123, (2, 0, 2, 0): -0.04619765659749828, (2, 1, 3, 0): -0.33769829264816803}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044243943195118, (3, 0, 3, 0): -0.12723610825071852, (2, 0, 3, 1): 0.3144668310290649, (2, 1, 2, 1): -0.6718294606435783, (3, 1, 3, 1): -0.04680269916701912, (3, 0, 2, 1): 0.0018892154101680363, (2, 0, 2, 0): -0.04619765496384935, (2, 1, 3, 0): -0.3376982464578858}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044243072966788, (3, 0, 3, 0): -0.12723610912583463, (2, 0, 3, 1): 0.3144667418260405, (2, 1, 2, 1): -0.6718294601350008, (3, 1, 3, 1): -0.04680269903683422, (3, 0, 2, 1): 0.0018891997719356485, (2, 0, 2, 0): -0.04619765414702489, (2, 1, 3, 0): -0.3376982233627447}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044242637852623, (3, 0, 3, 0): -0.1272361095633927, (2, 0, 3, 1): 0.3144666972245283, (2, 1, 2, 1): -0.671829459880712, (3, 1, 3, 1): -0.046802698971741774, (3, 0, 2, 1): 0.0018891919528194545, (2, 0, 2, 0): -0.046197653738612655, (2, 1, 3, 0): -0.3376982118151741}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.804424242029554, (3, 0, 3, 0): -0.12723610978217173, (2, 0, 3, 1): 0.31446667492377217, (2, 1, 2, 1): -0.6718294597535676, (3, 1, 3, 1): -0.04680269893919555, (3, 0, 2, 1): 0.0018891880432613576, (2, 0, 2, 0): -0.046197653534406545, (2, 1, 3, 0): -0.33769820604138884}  samples= None\n",
+      "E=-1.95156585  angles= {(3, 1, 2, 0): -0.8044242311516999, (3, 0, 3, 0): -0.12723610989156123, (2, 0, 3, 1): 0.31446666377339416, (2, 1, 2, 1): -0.6718294596899953, (3, 1, 3, 1): -0.046802698922922444, (3, 0, 2, 1): 0.001889186088482309, (2, 0, 2, 0): -0.04619765343230348, (2, 1, 3, 0): -0.33769820315449617}  samples= None\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: -1.951566\n",
+      "         Iterations: 38\n",
+      "         Function evaluations: 86\n",
+      "         Gradient evaluations: 74\n",
+      "\n",
+      "Obtained UCCSD energy: -1.9515658514930534\n"
      ]
     }
    ],
