--- a/Project_2_VQE_Molecules/H4_complete.ipynb
+++ b/Project_2_VQE_Molecules/H4_complete.ipynb
@@ -463,7 +463,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "H = tq.QubitHamiltonian.from_openfermion(get_qubit_hamiltonian('h4', 2, 'sto-3g', qubit_transf='jw'))\n",
+    "\n",
+    "a = tq.Variable(\"tau_0\")\n",
+    "U = construct_QMF_ansatz(8)\n",
+    "U += tq.gates.ExpPauli(paulistring=tq.PauliString.from_string(\"X(0)Y(1)X(2)X(3)\"), angle=a)\n",
+    "print(U)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
