--- a/Project_2_VQE_Molecules/S5_Circuits.ipynb
+++ b/Project_2_VQE_Molecules/S5_Circuits.ipynb
@@ -124,16 +124,9 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: could not get the desired backend ibmq_essex from any IBMQ account. Attempting to retrieve a fake.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "-0.9443634584223759"
+       "-0.6730820082191251"
       ]
      },
      "execution_count": 5,
@@ -143,8 +136,9 @@
    ],
    "source": [
     "# list of devices available can be found in ibmq account page\n",
-    "#provider = IBMQ.get_provider(hub='ibm-q-nus', group='default', project='default') \n",
-    "tq.simulate(E, variables=vars, samples=100, backend=\"qiskit\", device='ibmq_essex')#,qiskit_provider = provider) "
+    "provider = IBMQ.get_provider(hub='ibm-q-nus', group='default', project='default')\n",
+    "device = provider.get_backend('ibmq_essex')\n",
+    "tq.simulate(E, variables=vars, samples=100, backend=\"qiskit\", device=device)#,qiskit_provider = provider) "
    ]
   },
   {
