--- a/Project_2_VQE_Molecules/S4_Measurement.ipynb
+++ b/Project_2_VQE_Molecules/S4_Measurement.ipynb
@@ -15,11 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utility import * "
+    "from utility import *\n",
+    "import tequila as tq\n",
+    "import pickle as pkl"
    ]
   },
   {
@@ -33,15 +35,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Fragments 1: \n0.13716572937099497 [Z0] +\n0.15660062488237947 [Z0 Z1] +\n0.10622904490856075 [Z0 Z2] +\n0.15542669077992832 [Z0 Z3] +\n0.13716572937099492 [Z1] +\n0.15542669077992832 [Z1 Z2] +\n0.10622904490856075 [Z1 Z3] +\n-0.13036292057109117 [Z2] +\n0.16326768673564346 [Z2 Z3] +\n-0.13036292057109117 [Z3]\n\nFragments 2:\n-0.04919764587136755 [X0 X1 Y2 Y3]\n\nNumber of fragments: 5\n"
+     "output_type": "stream",
+     "text": [
+      "Fragments 1: \n",
+      "0.13716572937099494 [Z0] +\n",
+      "0.15660062488237958 [Z0 Z1] +\n",
+      "0.10622904490856085 [Z0 Z2] +\n",
+      "0.15542669077992843 [Z0 Z3] +\n",
+      "0.13716572937099494 [Z1] +\n",
+      "0.15542669077992843 [Z1 Z2] +\n",
+      "0.10622904490856085 [Z1 Z3] +\n",
+      "-0.1303629205710914 [Z2] +\n",
+      "0.1632676867356435 [Z2 Z3] +\n",
+      "-0.13036292057109133 [Z3]\n",
+      "\n",
+      "Fragments 2:\n",
+      "-0.04919764587136759 [X0 X1 Y2 Y3]\n",
+      "\n",
+      "Number of fragments: 5\n"
+     ]
     }
    ],
    "source": [
@@ -76,15 +95,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Number of mutually commuting parts: 2\nThe first commuting group\n-0.32760818967480887 [] +\n-0.04919764587136755 [X0 X1 Y2 Y3] +\n0.04919764587136755 [X0 Y1 Y2 X3] +\n0.04919764587136755 [Y0 X1 X2 Y3] +\n-0.04919764587136755 [Y0 Y1 X2 X3] +\n0.15660062488237947 [Z0 Z1] +\n0.10622904490856075 [Z0 Z2] +\n0.15542669077992832 [Z0 Z3] +\n0.15542669077992832 [Z1 Z2] +\n0.10622904490856075 [Z1 Z3] +\n0.16326768673564346 [Z2 Z3]\n"
+     "output_type": "stream",
+     "text": [
+      "Number of mutually commuting fragments: 2\n",
+      "The first commuting group\n",
+      "-0.3276081896748089 [] +\n",
+      "-0.04919764587136759 [X0 X1 Y2 Y3] +\n",
+      "0.04919764587136759 [X0 Y1 Y2 X3] +\n",
+      "0.04919764587136759 [Y0 X1 X2 Y3] +\n",
+      "-0.04919764587136759 [Y0 Y1 X2 X3] +\n",
+      "0.15660062488237958 [Z0 Z1] +\n",
+      "0.10622904490856085 [Z0 Z2] +\n",
+      "0.15542669077992843 [Z0 Z3] +\n",
+      "0.15542669077992843 [Z1 Z2] +\n",
+      "0.10622904490856085 [Z1 Z3] +\n",
+      "0.1632676867356435 [Z2 Z3]\n"
+     ]
     }
    ],
    "source": [
@@ -103,15 +136,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "This is unitary, U * U^+ = I \n(0.9999999999999996+0j) []\n"
+     "output_type": "stream",
+     "text": [
+      "This is unitary, U * U^+ = I \n",
+      "(0.9999999999999996+0j) []\n"
+     ]
     }
    ],
    "source": [
@@ -129,15 +165,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "-0.32760818967480876 [] +\n0.1554266907799282 [X0] +\n0.1566006248823793 [X0 X1] +\n0.04919764587136754 [X0 X1 Z3] +\n0.1062290449085607 [X0 X2] +\n-0.04919764587136754 [X0 Z3] +\n0.1062290449085607 [X1] +\n0.1554266907799282 [X1 X2] +\n-0.04919764587136754 [X1 X2 Z3] +\n0.16326768673564332 [X2] +\n0.04919764587136754 [X2 Z3]\n"
+     "output_type": "stream",
+     "text": [
+      "-0.32760818967480876 [] +\n",
+      "0.15542669077992827 [X0] +\n",
+      "0.15660062488237952 [X0 X1] +\n",
+      "0.04919764587136755 [X0 X1 Z3] +\n",
+      "0.10622904490856076 [X0 X2] +\n",
+      "-0.04919764587136755 [X0 Z3] +\n",
+      "0.10622904490856076 [X1] +\n",
+      "0.15542669077992827 [X1 X2] +\n",
+      "-0.04919764587136755 [X1 X2 Z3] +\n",
+      "0.16326768673564335 [X2] +\n",
+      "0.04919764587136755 [X2 Z3]\n"
+     ]
     }
    ],
    "source": [
@@ -149,20 +197,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In addition, current quantum computer can measure only the $z$ operators. Thus, QWC fragments with $x$ or $y$ operators require extra single-qubit unitaries that rotate them into $z$.  "
+    "In addition, current quantum computer can measure only the $z$ operators. Thus, QWC fragments with $x$ or $y$ operators\n",
+    "require extra single-qubit unitaries that rotate them into $z$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Checking whether U * U^+ is identity: 0.9999999999999998 []\n\nThe all-z form of qwc fragment:\n-0.3276081896748086 [] +\n0.15542669077992813 [Z0] +\n0.15660062488237922 [Z0 Z1] +\n0.049197645871367504 [Z0 Z1 Z3] +\n0.10622904490856065 [Z0 Z2] +\n-0.049197645871367504 [Z0 Z3] +\n0.10622904490856065 [Z1] +\n0.15542669077992813 [Z1 Z2] +\n-0.049197645871367504 [Z1 Z2 Z3] +\n0.16326768673564326 [Z2] +\n0.049197645871367504 [Z2 Z3]\n"
+     "output_type": "stream",
+     "text": [
+      "Checking whether U * U^+ is identity: 0.9999999999999998 []\n",
+      "\n",
+      "The all-z form of qwc fragment:\n",
+      "-0.3276081896748086 [] +\n",
+      "0.15542669077992818 [Z0] +\n",
+      "0.15660062488237944 [Z0 Z1] +\n",
+      "0.04919764587136754 [Z0 Z1 Z3] +\n",
+      "0.1062290449085607 [Z0 Z2] +\n",
+      "-0.04919764587136754 [Z0 Z3] +\n",
+      "0.1062290449085607 [Z1] +\n",
+      "0.15542669077992818 [Z1 Z2] +\n",
+      "-0.04919764587136754 [Z1 Z2 Z3] +\n",
+      "0.16326768673564326 [Z2] +\n",
+      "0.04919764587136754 [Z2 Z3]\n"
+     ]
     }
    ],
    "source": [
@@ -172,6 +236,170 @@
     "allz = remove_complex(uz * qwc * uz)\n",
     "print(\"\\nThe all-z form of qwc fragment:\\n{}\".format(allz))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Now we will do it for the molecules in question:$H_4$, $N_2$, and $H_2O$."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [],
+   "source": [
+    "def return_qubit_ham(mol: str, geometry: float, basis: str, transf: str = 'jw', active: dict = None):\n",
+    "    xyz = get_molecular_data(mol, geometry, True)\n",
+    "    molecule = tq.quantumchemistry.Molecule(geometry=xyz, basis_set=basis,\n",
+    "                                            transformation=transf, active_orbitals=active)\n",
+    "    ham = molecule.make_hamiltonian()\n",
+    "    ham = ham.to_openfermion()\n",
+    "    return ham\n",
+    "\n",
+    "def return_measurement_fragments(ham):\n",
+    "    comm_groups = get_commuting_group(ham)\n",
+    "    out_dict = {}\n",
+    "    for key, group in comm_groups.items():\n",
+    "        qwc_unitary = get_qwc_unitary(group)\n",
+    "        qwc_op = remove_complex(qwc_unitary * group * qwc_unitary)\n",
+    "        unitary_z = get_zform_unitary(qwc_op)\n",
+    "        z_measurements = remove_complex(unitary_z * qwc_op * unitary_z)\n",
+    "        out_dict[key] = z_measurements\n",
+    "    return out_dict"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [],
+   "source": [
+    "#H_4\n",
+    "angles = np.linspace(85, 95, 10)\n",
+    "h4_dict = {}\n",
+    "for a in angles:\n",
+    "    ham = return_qubit_ham('h4', a, 'sto-3g', 'jw')\n",
+    "    h4_dict[a] = return_measurement_fragments(ham)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "outputs": [],
+   "source": [
+    "# generating this takes a long time - let's save so we have it available\n",
+    "with open(\"../../week2_data/h4_jw_measurements.pkl\", 'wb') as f:\n",
+    "    pkl.dump(h4_dict, f)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n",
+      "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n",
+      "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#H2O\n",
+    "basis = '6-31g'\n",
+    "active = {'B1':[0,1], 'A1':[2,3]}\n",
+    "lengths = np.linspace(0.5, 1, 10)\n",
+    "h2o_dict = {}\n",
+    "for l in lengths:\n",
+    "    ham = return_qubit_ham('h2o', l, basis, 'jw', active)\n",
+    "    h2o_dict[l] = return_measurement_fragments(ham)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "with open(\"../../week2_data/h2o_jw_measurements.pkl\", 'wb') as f:\n",
+    "    pkl.dump(h2o_dict, f)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# N2\n",
+    "basis = '6-31g'\n",
+    "active = {'AG': [1, 3], 'B1U': [0, 1], 'B3U': [0]}\n",
+    "lengths = np.linspace(0.1, 2, 10)\n",
+    "n2_dict = {}\n",
+    "for l in lengths:\n",
+    "    ham = return_qubit_ham('n2', l, basis, 'jw', active)\n",
+    "    n2_dict[l] = return_measurement_fragments(ham)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "with open(\"../../week2_data/n2_jw_measurements.pkl\", 'wb') as f:\n",
+    "    pkl.dump(n2_dict, f)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
   }
  ],
  "metadata": {
@@ -189,8 +417,9 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "qchem",
-   "display_name": "qchem"
+   "name": "pycharm-44f2fd2a",
+   "language": "python",
+   "display_name": "PyCharm (Project_2_VQE_Molecules)"
   }
  },
  "nbformat": 4,
