cancel and rerun N2

--- a/Project_2_VQE_Molecules/S4_Measurement.ipynb
+++ b/Project_2_VQE_Molecules/S4_Measurement.ipynb
@@ -317,12 +317,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n",
+      "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n",
+      "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n",
+      "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n",
+      "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n",
+      "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n",
+      "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n",
       "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n",
       "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n",
       "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n"
@@ -342,14 +349,13 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "outputs": [],
    "source": [
     "with open(\"../../week2_data/h2o_jw_measurements.pkl\", 'wb') as f:\n",
@@ -358,15 +364,38 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 48,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n",
+      "There are known issues with some psi4 methods and frozen virtual orbitals. Proceed with fingers crossed for hf.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-48-3f03da7570bc>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      6\u001B[0m \u001B[0;32mfor\u001B[0m \u001B[0ml\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mlengths\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      7\u001B[0m     \u001B[0mham\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mreturn_qubit_ham\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'n2'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0ml\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mbasis\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m'jw'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mactive\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 8\u001B[0;31m     \u001B[0mn2_dict\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0ml\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mreturn_measurement_fragments\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mham\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;32m<ipython-input-45-2e4302abf877>\u001B[0m in \u001B[0;36mreturn_measurement_fragments\u001B[0;34m(ham)\u001B[0m\n\u001B[1;32m     12\u001B[0m     \u001B[0;32mfor\u001B[0m \u001B[0mkey\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mgroup\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mcomm_groups\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mitems\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     13\u001B[0m         \u001B[0mqwc_unitary\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mget_qwc_unitary\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mgroup\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 14\u001B[0;31m         \u001B[0mqwc_op\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mremove_complex\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mqwc_unitary\u001B[0m \u001B[0;34m*\u001B[0m \u001B[0mgroup\u001B[0m \u001B[0;34m*\u001B[0m \u001B[0mqwc_unitary\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     15\u001B[0m         \u001B[0munitary_z\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mget_zform_unitary\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mqwc_op\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     16\u001B[0m         \u001B[0mz_measurements\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mremove_complex\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0munitary_z\u001B[0m \u001B[0;34m*\u001B[0m \u001B[0mqwc_op\u001B[0m \u001B[0;34m*\u001B[0m \u001B[0munitary_z\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/.local/lib/python3.7/site-packages/openfermion/ops/_symbolic_operator.py\u001B[0m in \u001B[0;36m__mul__\u001B[0;34m(self, multiplier)\u001B[0m\n\u001B[1;32m    378\u001B[0m         \u001B[0;32mif\u001B[0m \u001B[0misinstance\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mmultiplier\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m(\u001B[0m\u001B[0mint\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mfloat\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mcomplex\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mtype\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    379\u001B[0m             \u001B[0mproduct\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcopy\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mdeepcopy\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 380\u001B[0;31m             \u001B[0mproduct\u001B[0m \u001B[0;34m*=\u001B[0m \u001B[0mmultiplier\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    381\u001B[0m             \u001B[0;32mreturn\u001B[0m \u001B[0mproduct\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    382\u001B[0m         \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/.local/lib/python3.7/site-packages/openfermion/ops/_symbolic_operator.py\u001B[0m in \u001B[0;36m__imul__\u001B[0;34m(self, multiplier)\u001B[0m\n\u001B[1;32m    349\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    350\u001B[0m                     new_coefficient, new_term = self._simplify(\n\u001B[0;32m--> 351\u001B[0;31m                             new_term, coefficient=new_coefficient)\n\u001B[0m\u001B[1;32m    352\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    353\u001B[0m                     \u001B[0;31m# Update result dict.\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/.local/lib/python3.7/site-packages/openfermion/ops/_qubit_operator.py\u001B[0m in \u001B[0;36m_simplify\u001B[0;34m(self, term, coefficient)\u001B[0m\n\u001B[1;32m    137\u001B[0m             \u001B[0;31m# Reached different qubit, save result and re-initialize.\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    138\u001B[0m             \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 139\u001B[0;31m                 \u001B[0;32mif\u001B[0m \u001B[0mleft_action\u001B[0m \u001B[0;34m!=\u001B[0m \u001B[0;34m'I'\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    140\u001B[0m                     \u001B[0mnew_term\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mleft_factor\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    141\u001B[0m                 \u001B[0mleft_factor\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mright_factor\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
    "source": [
     "# N2\n",
     "basis = '6-31g'\n",
@@ -380,8 +409,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
@@ -391,13 +419,12 @@
    "outputs": [],
    "source": [
     "with open(\"../../week2_data/n2_jw_measurements.pkl\", 'wb') as f:\n",
-    "    pkl.dump(n2_dict, f)"
+    "    pkl.dump(n2_dict, f)\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   }
