--- a/Project_2_VQE_Molecules/S1_Classical_Methods.ipynb
+++ b/Project_2_VQE_Molecules/S1_Classical_Methods.ipynb
@@ -71,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -82,7 +84,7 @@
       "E = -1.0882281844069175 Eh\n",
       "E = -1.1369289594005694 Eh\n",
       "E = -1.1229570527982327 Eh\n",
-      "E = -1.0887645364963472 Eh\n",
+      "E = -1.0887645364963467 Eh\n",
       "E = -1.050442037218747 Eh\n",
       "E = -1.0154682491653282 Eh\n",
       "E = -0.9873929962932158 Eh\n",
@@ -109,21 +111,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E = 0.16412595411336572 Eh\n",
-      "E = -0.8397057843499892 Eh\n",
-      "E = -1.0748879317191187 Eh\n",
-      "E = -1.1175258568986868 Eh\n",
-      "E = -1.0951595815644861 Eh\n",
-      "E = -1.0495617842752063 Eh\n",
-      "E = -0.9960202460350621 Eh\n",
-      "E = -0.9415475409906798 Eh\n",
-      "E = -0.8899750208893151 Eh\n",
-      "E = -0.8432718025417757 Eh\n",
-      "E = -0.8022428650141392 Eh\n",
-      "E = -0.7669825247360009 Eh\n",
-      "E = -0.737154544898827 Eh\n",
-      "E = -0.7121961606082455 Eh\n",
-      "E = -0.6914700512624807 Eh\n"
+      "E = 0.16412595411338726 Eh\n",
+      "E = -0.8397057843499969 Eh\n",
+      "E = -1.0748879317191116 Eh\n",
+      "E = -1.117525856898691 Eh\n",
+      "E = -1.0951595815644894 Eh\n",
+      "E = -1.049561784275212 Eh\n",
+      "E = -0.9960202460350605 Eh\n",
+      "E = -0.9415475409906808 Eh\n",
+      "E = -0.8899750208893137 Eh\n",
+      "E = -0.8432718025417766 Eh\n",
+      "E = -0.8022428650141396 Eh\n",
+      "E = -0.7669825247360008 Eh\n",
+      "E = -0.7371545448988277 Eh\n",
+      "E = -0.712196160608243 Eh\n",
+      "E = -0.6914700512624803 Eh\n"
      ]
     }
    ],
@@ -141,21 +143,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E = 0.15748412056436212 Eh\n",
-      "E = -0.8488985094851157 Eh\n",
-      "E = -1.088231017430786 Eh\n",
+      "E = 0.15748412056436098 Eh\n",
+      "E = -0.8488985094851158 Eh\n",
+      "E = -1.0882310174307865 Eh\n",
       "E = -1.1369333351418645 Eh\n",
-      "E = -1.1229593878059765 Eh\n",
-      "E = -1.0887606905920533 Eh\n",
-      "E = -1.0504260893271258 Eh\n",
-      "E = -1.015441636439638 Eh\n",
-      "E = -0.9873692257052733 Eh\n",
-      "E = -0.9670168314563375 Eh\n",
-      "E = -0.9534301294889965 Eh\n",
-      "E = -0.9449225613845078 Eh\n",
-      "E = -0.9398332746700113 Eh\n",
-      "E = -0.9368793989542739 Eh\n",
-      "E = -0.9351989265367047 Eh\n"
+      "E = -1.122959387805977 Eh\n",
+      "E = -1.088760690592054 Eh\n",
+      "E = -1.0504260893271256 Eh\n",
+      "E = -1.0154416364396381 Eh\n",
+      "E = -0.9873692257052727 Eh\n",
+      "E = -0.9670168314563381 Eh\n",
+      "E = -0.9534301294889963 Eh\n",
+      "E = -0.9449225613845074 Eh\n",
+      "E = -0.9398332746700119 Eh\n",
+      "E = -0.9368793989542714 Eh\n",
+      "E = -0.9351989265367053 Eh\n"
      ]
     }
    ],
@@ -375,9 +377,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tequila_devel_3.6",
+   "display_name": "cdl2020",
    "language": "python",
-   "name": "tequila_devel_3.6"
+   "name": "cdl2020"
   },
   "language_info": {
    "codemirror_mode": {
@@ -389,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
