--- a/Project_2_VQE_Molecules/S2_Hamiltonian_gen.ipynb
+++ b/Project_2_VQE_Molecules/S2_Hamiltonian_gen.ipynb
@@ -32,9 +32,25 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "-0.32760818967480887 [] +\n-0.04919764587136755 [X0 X1 Y2 Y3] +\n0.04919764587136755 [X0 Y1 Y2 X3] +\n0.04919764587136755 [Y0 X1 X2 Y3] +\n-0.04919764587136755 [Y0 Y1 X2 X3] +\n0.13716572937099497 [Z0] +\n0.15660062488237947 [Z0 Z1] +\n0.10622904490856075 [Z0 Z2] +\n0.15542669077992832 [Z0 Z3] +\n0.13716572937099492 [Z1] +\n0.15542669077992832 [Z1 Z2] +\n0.10622904490856075 [Z1 Z3] +\n-0.13036292057109117 [Z2] +\n0.16326768673564346 [Z2 Z3] +\n-0.13036292057109117 [Z3]\n"
+     "output_type": "stream",
+     "text": [
+      "-0.32760818967480887 [] +\n",
+      "-0.04919764587136755 [X0 X1 Y2 Y3] +\n",
+      "0.04919764587136755 [X0 Y1 Y2 X3] +\n",
+      "0.04919764587136755 [Y0 X1 X2 Y3] +\n",
+      "-0.04919764587136755 [Y0 Y1 X2 X3] +\n",
+      "0.13716572937099497 [Z0] +\n",
+      "0.15660062488237947 [Z0 Z1] +\n",
+      "0.10622904490856075 [Z0 Z2] +\n",
+      "0.15542669077992832 [Z0 Z3] +\n",
+      "0.13716572937099492 [Z1] +\n",
+      "0.15542669077992832 [Z1 Z2] +\n",
+      "0.10622904490856075 [Z1 Z3] +\n",
+      "-0.13036292057109117 [Z2] +\n",
+      "0.16326768673564346 [Z2 Z3] +\n",
+      "-0.13036292057109117 [Z3]\n"
+     ]
     }
    ],
    "source": [
@@ -58,9 +74,14 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "The effective Hamiltonian:\n -0.5310513494337641 [] +\n0.1967905834854702 [X0] +\n-0.5350572998841723 [Z0]\n"
+     "output_type": "stream",
+     "text": [
+      "The effective Hamiltonian:\n",
+      " -0.5310513494337641 [] +\n",
+      "0.1967905834854702 [X0] +\n",
+      "-0.5350572998841723 [Z0]\n"
+     ]
     }
    ],
    "source": [
@@ -82,9 +103,15 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "The ground state energy:\nE = -1.1011503301329564 Eh\n\nThe eigenvalues in the effective Hamiltonian: \n [-1.10115031  0.03904763]\n"
+     "output_type": "stream",
+     "text": [
+      "The ground state energy:\n",
+      "E = -1.1011503301329564 Eh\n",
+      "\n",
+      "The eigenvalues in the effective Hamiltonian: \n",
+      " [-1.10115031  0.03904763]\n"
+     ]
     }
    ],
    "source": [
@@ -103,9 +130,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qchem",
+   "display_name": "cdl2020",
    "language": "python",
-   "name": "qchem"
+   "name": "cdl2020"
   },
   "language_info": {
    "codemirror_mode": {
@@ -117,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1-final"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
