added entangler functions to Tequila part for both H4 and LiH

--- a/Project_2_VQE_Molecules/H4_complete.ipynb
+++ b/Project_2_VQE_Molecules/H4_complete.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generation the circuit for H4\n",
+    "# Generating the circuit for H4\n",
     "\n",
     "## Classical calculations:"
    ]
@@ -267,17 +267,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Entangler Screening Protocol:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of spin-orbitals (qubits): 8 \n",
-      "\n",
-      "FCI energy: -1.9551250115194279\n"
+     "ename": "NameError",
+     "evalue": "name 'get_molecular_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-d1c61adb6c40>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtrotter_steps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mxyz_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_molecular_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'h4'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgeometry\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxyz_format\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mbasis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'sto-3g'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_molecular_data' is not defined"
      ]
     }
    ],
@@ -464,6 +480,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Define number of entanglers to enter ansatz\n",
+    "n_ents = 1\n",
+    "\n",
+    "#Rank entanglers using energy gradient criterion\n",
+    "ranked_entangler_groupings = generate_QCC_gradient_groupings(H.to_openfermion(), \n",
+    "                                                             2*h4.n_orbitals, \n",
+    "                                                             hf_reference, \n",
+    "                                                             cutoff=threshold)\n",
+    "\n",
+    "print('Grouping gradient magnitudes (Grouping : Gradient magnitude):')\n",
+    "for i in range(len(ranked_entangler_groupings)):\n",
+    "    print('{} : {}'.format(i+1,ranked_entangler_groupings[i][1]))\n",
+    "\n",
+    "\n",
+    "entanglers = get_QCC_entanglers(ranked_entangler_groupings, n_ents, 2*h4.n_orbitals)\n",
+    "\n",
+    "print('\\nSelected entanglers:')\n",
+    "for ent in entanglers:\n",
+    "    print(ent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "H = tq.QubitHamiltonian.from_openfermion(get_qubit_hamiltonian('h4', 2, 'sto-3g', qubit_transf='jw'))\n",
     "\n",
     "a = tq.Variable(\"tau_0\")\n",
@@ -472,6 +515,13 @@
     "print(U)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
