--- a/Project_2_VQE_Molecules/LiH_complete.ipynb
+++ b/Project_2_VQE_Molecules/LiH_complete.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generation the circuit for LiH\n",
+    "# Generating the circuit for LiH\n",
     "\n",
     "## Classical calculations:"
    ]
@@ -959,7 +959,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Define number of entanglers to enter ansatz\n",
+    "n_ents = 1\n",
+    "\n",
+    "#Rank entanglers using energy gradient criterion\n",
+    "ranked_entangler_groupings = generate_QCC_gradient_groupings(H.to_openfermion(), \n",
+    "                                                             2*lih.n_orbitals, \n",
+    "                                                             hf_reference, \n",
+    "                                                             cutoff=threshold)\n",
+    "\n",
+    "print('Grouping gradient magnitudes (Grouping : Gradient magnitude):')\n",
+    "for i in range(len(ranked_entangler_groupings)):\n",
+    "    print('{} : {}'.format(i+1,ranked_entangler_groupings[i][1]))\n",
+    "\n",
+    "\n",
+    "entanglers = get_QCC_entanglers(ranked_entangler_groupings, n_ents, 2*lih.n_orbitals)\n",
+    "\n",
+    "print('\\nSelected entanglers:')\n",
+    "for ent in entanglers:\n",
+    "    print(ent)"
+   ]
   }
  ],
  "metadata": {
