--- a/Project_2_VQE_Molecules/S3_Unitary_Ansatz.ipynb
+++ b/Project_2_VQE_Molecules/S3_Unitary_Ansatz.ipynb
@@ -1107,10 +1107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "outputs": [],
    "source": [
-    "np.save('../../week2_data/week2_n2.npy', (n2results, lengths))"
+    "np.save('../../week2_data/week2_n2.npy', (n2results, lengths))\n",
+    "h = ham.to_openfermion()"
    ],
    "metadata": {
     "collapsed": false,
